@@ -48,43 +48,36 @@
 #include "host.h"
 #include "host_string.h"
 
-#if !defined(SERVERONLY)
+#include "progs.h"
+#include "effects.h"
+#include "server.h"
+#if defined(SERVERONLY)
+#include "server/model.h"
+#include "world.h"
+
+#else	/* client */
 #include "console.h"
-#include "vid.h"
 #include "wad.h"
+#include "vid.h"
+#include "screen.h"
 #include "draw.h"
 #include "render.h"
 #include "view.h"
-#include "screen.h"
 #include "sbar.h"
 #include "q_sound.h"
-#endif	/* !SERVERONLY */
-
-#include "progs.h"
-#include "effects.h"
-
-#if !defined(SERVERONLY)
 #include "client.h"
-#endif	/* SERVERONLY */
-#include "server.h"
 
 #if defined(GLQUAKE)
 #include "glheader.h"
 #include "gl_model.h"
 #include "glquake.h"
-#elif defined(SERVERONLY)
-#include "server/model.h"
 #else	/* sw client */
 #include "model.h"
 #include "d_iface.h"
 #endif
-#if !defined(SERVERONLY)
-#include "r_part.h"
-#endif	/* SERVERONLY */
-
 #include "world.h"
 
-#if !defined(SERVERONLY)
+#include "r_part.h"
 #include "input.h"
 #include "keys.h"
 #include "menu.h"
