@@ -49,19 +49,19 @@
 #include "host.h"
 #include "host_string.h"
 
-#include "console.h"
-#include "vid.h"
-#include "wad.h"
-#include "draw.h"
-#include "render.h"
-#include "view.h"
-#include "screen.h"
-#include "sbar.h"
-#include "q_sound.h"
-
 #include "pr_comp.h"	/* defs shared with qcc		*/
 #include "progdefs.h"	/* generated by program cdefs	*/
 #include "effects.h"
+
+#include "console.h"
+#include "wad.h"
+#include "vid.h"
+#include "screen.h"
+#include "draw.h"
+#include "render.h"
+#include "view.h"
+#include "sbar.h"
+#include "q_sound.h"
 #include "client.h"
 
 #if defined(GLQUAKE)
@@ -72,10 +72,9 @@
 #include "model.h"
 #include "d_iface.h"
 #endif
-#include "r_part.h"
-
 #include "pmove.h"
 
+#include "r_part.h"
 #include "input.h"
 #include "keys.h"
 #include "menu.h"
